# django-rest-project-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
.devcontainer/: .env.example  docker-compose.yml
docker/: run-server
server/: api.py  asgi.py  urls.py
server/app/authentication/: admin.py  apps.py  models.py  schema.py  tests.py  urls.py  views.py
server/app/authentication/migrations/: 0001_initial.py  0002_create_superuser.py  0003_alter_user_creator_alter_user_editor.py
server/app/chat/: apps.py  consumers.py  tests.py  tests.py.bak  urls.py  views.py
server/app/common/: apps.py  schema.py  serializers.py  tests.py  urls.py  views.py
server/app/todo/: admin.py  models.py  repositories.py  schema.py  tests.py  views.py
server/app/todo/migrations/: 0001_initial.py
server/repositories/: base.py
server/scripts/: create_admin.py  waiting_database.py
server/settings/: .env.example  __init__.py
server/settings/components/: jwt.py  ninja.py  ninja_jwt.py  nplusone.py  rest_framework.py  simple_jwt.py  spectacular.py
server/settings/environments/: development.py  test.py
server/typings/: django.py  rest_framework.py
server/utils/django/: admin.py  fields.py  managers.py  models.py  querysets.py  repositories.py
server/utils/django/middlewares/: request_user.py
server/utils/django/models/: base.py  utils.py
server/utils/django/tests/: models.py  test_admin.py  test_fields.py  test_managers.py  test_respositories.py
server/utils/django/tests/test_models/: test_base.py
server/utils/ninja/: exception_handler.py  pagination.py
server/utils/ninja/schema/: mixins.py
server/utils/rest_framework/: exception_handler.py  fields.py  pagination.py  parsers.py  serializers.py  views.py  viewsets.py
server/utils/rest_framework/serializers/: base.py
server/utils/rest_framework/tests/: test_exception_handler.py  test_fields.py  test_pagination.py  test_parsers.py  test_viewsets.py
server/utils/rest_framework/tests/serializers/: test_base.py
